fix(cross): #2 lint src only
- npm lint script runs for src folder only
- correct the vscode settings file tabSize

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "editor.rulers": [
-        {
-            "color": "#888",
-            "column": 80
-        }
-    ],
-    "editor.tabSize": 2
+	"editor.rulers": [
+		{
+			"color": "#888",
+			"column": 80
+		}
+	],
+	"editor.tabSize": 2,
 }
