--- a/front/package.json
+++ b/front/package.json
@@ -6,9 +6,9 @@
     "android": "react-native run-android",
     "format": "prettier --write \"src/**/*.ts\" --config .prettierrc",
     "ios": "react-native run-ios",
+    "lint": "eslint src --fix",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "test": "jest"
   },
   "dependencies": {
     "react": "18.1.0",
