--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-swipe-gestures": "^1.0.5"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
