--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
-	"editor.rulers": [
-		{
-			"color": "#888",
-			"column": 80
-		}
-	],
-	"editor.tabSize": 2,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.rulers": [
+    {
+      "color": "#888",
+      "column": 80
+    }
+  ],
+  "editor.tabSize": 2
 }
