--- a/front/package.json
+++ b/front/package.json
@@ -4,43 +4,45 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "format": "prettier --write \"src/**/*.ts\" --config .prettierrc",
+    "format": "prettier --config .prettierrc.js --write src/**/*.{ts,tsx}",
     "ios": "react-native run-ios",
     "lint": "eslint src --fix",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.14",
-    "@react-navigation/native-stack": "^6.9.2",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "react": "18.2.0",
+    "react-native": "0.71.1",
     "react-native-date-picker": "^4.2.6",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-swipe-gestures": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
+    "@babel/core": "^7.20.12",
+    "@babel/runtime": "^7.20.13",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.2.6",
+    "@types/react": "^18.0.27",
+    "@types/react-native": "^0.71.0",
     "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "babel-jest": "^29.4.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "jest": "^29.4.0",
+    "metro-react-native-babel-preset": "0.74.1",
+    "prettier": "^2.8.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^4.9.4"
   },
   "jest": {
     "preset": "react-native",
