--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "format": "prettier --config .prettierrc.js --write src/**/*.{ts,tsx}",
     "ios": "react-native run-ios",
-    "lint": "eslint src --fix",
+    "lint": "eslint src --ext .ts,.tsx --fix",
     "start": "react-native start",
     "test": "jest"
   },
@@ -30,14 +30,12 @@
     "@types/react-native": "^0.71.0",
     "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-jest": "^29.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.32.0",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-config-estidlore": "github:estidlore/eslint-config-estidlore",
     "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^9.0.0",
     "jest": "^29.4.0",
     "metro-react-native-babel-preset": "0.74.1",
     "prettier": "^2.8.3",
