--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "android:build": "npm run android:bundle && cd android && gradlew assembleDebug && cd ..",
     "format": "prettier --config .prettierrc.js --write src/**/*.{ts,tsx}",
     "ios": "react-native run-ios",
     "lint": "eslint src --ext .ts,.tsx --fix",
