--- a/front/.gitignore
+++ b/front/.gitignore
@@ -62,3 +62,7 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
+# Custom (android/app/src/main)
+**/res/drawable-*dpi
+**/assets/index.android.bundle
