fix(front): #103 fix gradle and build script
- Generating apk creates drawables for each screen dpi
  Those files now are removed at the end of the build script
- buildTypes in android app's gradle are set to debug and release
  Adding a third type without proper config caused errors
- Add npm script to clean and build gradle

--- a/front/android/app/build.gradle
+++ b/front/android/app/build.gradle
@@ -119,17 +119,15 @@ android {
         }
     }
     buildTypes {
-        common {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            shrinkResources true
-        }
         debug {
-            initWith common
+            minifyEnabled false
+            shrinkResources false
             signingConfig signingConfigs.debug
         }
         release {
-            initWith common
+            minifyEnabled enableProguard
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            shrinkResources enableProguard
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug            
