--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/analytics": "^17.4.0",
+    "@react-native-firebase/app": "^17.4.0",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@realm/react": "^0.4.3",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-date-picker": "^4.2.6",
