--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,15 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - front/**
 jobs:
   lint:
     name: Lint & Format
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front
     steps:
       - uses: actions/checkout@v3
       - name: Install packages
