--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,12 @@ jobs:
         working-directory: ./front
     steps:
       - uses: actions/checkout@v3
+
       - name: Install packages
-      - run: npm ci
-      
+        run: npm ci
+
       - name: Prettier
-      - run: npm run format
-      
+        run: npm run format
+
       - name: ESLint
-      - run: npm run lint
+        run: npm run lint
