--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install packages
+        run: npm ci
+
       - name: Prettier
         run: npm run format
 
