--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -18,8 +18,5 @@ jobs:
       - name: Install packages
         run: npm ci
 
-      - name: Prettier
-        run: npm run format
-
       - name: ESLint
-        run: npm run lint
+        run: npm run lint:check
