--- a/front/android/app/build.gradle
+++ b/front/android/app/build.gradle
@@ -107,7 +107,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
+            universalApk enableSeparateBuildPerCPUArchitecture
             include (*reactNativeArchitectures())
         }
     }
