chore(cross): #245 setup monorepo
- Move eslint and prettier to root folder
- Setup root package.json
- Change front index extension from js to ts
- Remove scripts format:check & lint:check

--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -17,9 +17,13 @@ jobs:
 
       - name: Install packages
         run: npm ci
+        working-directory: .
+
+      - name: Install front packages
+        run: npm ci
 
       - name: Lint
-        run: npm run lint:check
+        run: npm run lint
 
       - name: Format
-        run: npm run format:check
+        run: npm run format
