--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -15,7 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install packages
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./
+
+      - name: Install front dependencies
         run: npm ci
 
       - name: Lint
