--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "android": "react-native run-android",
-    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "android:build": "npm run android:bundle && cd android && gradlew assembleDebug && find . -type d -regex '.*/res/drawable-.*dpi' -exec rm -rf {} ; && cd ..",
     "android:clean": "cd android && gradlew clean && gradlew build && cd ..",
     "format": "prettier --write src",
