--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "build": "rimraf dist && tsc",
+    "dev": "concurrently \"npm run watch\" \"npm run start\"",
     "format": "prettier --write src",
-    "lint": "eslint src --ext .ts,.tsx --fix",
-    "start": "node dist/index.js"
+    "lint": "eslint src --ext .ts --fix",
+    "start": "nodemon -q dist/index.js",
+    "watch": "npm run build -- --watch"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -19,6 +20,7 @@
     "@types/node": "^20.1.0",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
+    "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
   }
 }
