--- a/packages/back/tsconfig.json
+++ b/packages/back/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "dist",
     "skipLibCheck": true,
     "strict": true,
