--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase-functions": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
     "concurrently": "^8.0.1",
+    "firebase-functions-test": "^3.0.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
