--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -2,14 +2,18 @@
   "author": "Adaptarte",
   "name": "adaptarte-back",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
     "dev": "concurrently \"npm run watch\" \"npm run start\"",
+    "deploy": "firebase deploy --only functions",
     "format": "prettier --write src",
     "lint": "eslint src --ext .ts --fix",
-    "start": "nodemon -q dist/index.js",
+    "start": "firebase emulators:start --only functions",
     "watch": "npm run build -- --watch"
+  },
+  "engines": {
+    "node": "16"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
