--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "dev": "concurrently \"npm run watch\" \"npm run start\"",
     "deploy": "firebase deploy --only functions",
+    "dev": "concurrently \"npm run watch\" \"npm run start\"",
     "format": "prettier --write src",
     "lint": "eslint src --ext .ts --fix",
     "start": "firebase emulators:start --only functions",
@@ -21,8 +21,14 @@
     "firebase-functions": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@babel/runtime": "^7.21.5",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "concurrently": "^8.0.1",
     "firebase-functions-test": "^3.0.0",
     "nodemon": "^2.0.22",
