chore(front): #262 config android release build
- Edit script android:bundle to remove assets generation
- Edit script android:build to not delete generated assets
- Setup keystore and signing.properties with release signing config
- Specify entry file in gradle

--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "android": "react-native run-android",
-    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "android:build": "npm run android:bundle && cd android && gradlew assembleDebug && find . -type d -regex '.*/res/drawable-.*dpi' -exec rm -rf {} ; && cd ..",
-    "android:clean": "cd android && gradlew clean && gradlew build && cd ..",
+    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle",
+    "android:build": "npm run android:bundle && cd android && gradlew assemble",
+    "android:clean": "cd android && gradlew clean && gradlew build",
     "format": "prettier --write src",
     "ios": "react-native run-ios",
     "lint": "eslint src --ext .ts,.tsx --fix",
