--- a/packages/front/android/app/build.gradle
+++ b/packages/front/android/app/build.gradle
@@ -39,7 +39,7 @@ react {
     // bundleAssetName = "MyApplication.android.bundle"
     //
     //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
-    // entryFile = file("../js/MyApplication.android.js")
+    entryFile = file("../../index.ts")
     //
     //   A list of extra flags to pass to the 'bundle' commands.
     //   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
@@ -118,6 +118,17 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            def props = new Properties()
+            def fis = new FileInputStream(file('signing.properties'))
+            props.load(fis)
+            fis.close()
+
+            storeFile file(props.RELEASE_STORE_FILE)
+            storePassword props.RELEASE_STORE_PASSWORD
+            keyAlias props.RELEASE_KEY_ALIAS
+            keyPassword props.RELEASE_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
@@ -129,9 +140,7 @@ android {
             minifyEnabled enableProguard
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             shrinkResources enableProguard
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug            
+            signingConfig signingConfigs.release            
         }
     }
 
