--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "android": "react-native run-android",
     "android:bundle": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle",
-    "android:build": "npm run android:bundle && cd android && gradlew assemble",
+    "android:build": "npm run android:bundle && cd android && gradlew assembleRelease && gradlew assembleDebug",
     "android:clean": "cd android && gradlew clean && gradlew build",
     "format": "prettier --write src",
     "ios": "react-native run-ios",
@@ -14,39 +14,39 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.7.1",
-    "@react-native-firebase/analytics": "^17.4.2",
+    "@react-native-firebase/analytics": "^17.5.0",
     "@react-native-firebase/app": "^17.4.2",
-    "@react-native-firebase/auth": "^17.4.2",
-    "@react-native-firebase/firestore": "^17.4.2",
-    "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-firebase/firestore": "^17.5.0",
+    "@react-native-google-signin/google-signin": "^9.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
-    "firebase": "^9.19.1",
-    "react": "18.2.0",
-    "react-native": "0.71.1",
-    "react-native-date-picker": "^4.2.10",
-    "react-native-safe-area-context": "^4.5.1",
+    "firebase": "^9.22.0",
+    "react": "^18.2.0",
+    "react-native": "^0.71.8",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "realm": "^11.7.0"
+    "realm": "^11.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/runtime": "^7.21.0",
+    "@babel/core": "^7.21.8",
+    "@babel/runtime": "^7.21.5",
     "@testing-library/jest-native": "^5.4.2",
-    "@testing-library/react-native": "^11.5.1",
-    "@tsconfig/react-native": "^2.0.3",
-    "@types/jest": "^29.5.0",
-    "@types/react": "^18.0.34",
-    "@types/react-native": "^0.71.5",
+    "@testing-library/react-native": "^12.1.2",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.6",
+    "@types/react-native": "^0.72.1",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-plugin-react-native": "^4.0.0",
     "jest": "^29.5.0",
-    "metro-react-native-babel-preset": "0.74.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "^5.0.0"
+    "metro-react-native-babel-preset": "^0.76.4",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^5.0.4"
   }
 }
