--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.4.0"
   },
   "devDependencies": {
