--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -4,12 +4,13 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && babel src --out-dir dist --extensions \".ts\"",
     "deploy": "firebase deploy --only functions",
     "dev": "concurrently \"npm run watch\" \"npm run start\"",
     "format": "prettier --write src",
     "lint": "eslint src --ext .ts --fix",
     "start": "firebase emulators:start --only functions",
+    "test": "jest",
     "watch": "npm run build -- --watch"
   },
   "engines": {
@@ -28,12 +29,17 @@
     "@babel/preset-typescript": "^7.21.5",
     "@babel/runtime": "^7.21.5",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.1.0",
+    "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "concurrently": "^8.0.1",
     "firebase-functions-test": "^3.0.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.0",
+    "superagent": "^8.0.9",
+    "supertest": "^6.3.3",
     "typescript": "^5.0.4"
   }
 }
