--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -31,6 +31,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.1.0",
+    "@types/superagent": "^4.1.18",
+    "@types/supertest": "^2.0.12",
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "concurrently": "^8.0.1",
