--- a/packages/front/ios/Podfile
+++ b/packages/front/ios/Podfile
@@ -6,10 +6,11 @@ install! 'cocoapods', :deterministic_uuids => false
 
 target 'Adaptarte' do
   config = use_native_modules!
-
+  use_frameworks! :linkage => :static
+  
   # Flags change depending on the env values.
   flags = get_default_flags()
-
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
@@ -21,7 +22,7 @@ target 'Adaptarte' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => FlipperConfiguration.enabled,
+    #:flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
