--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -22,13 +22,15 @@
     "@react-native-google-signin/google-signin": "^9.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-native-vector-icons": "^6.4.13",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
     "react-native-date-picker": "^4.2.13",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-swipe-gestures": "^1.0.5"
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
