--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -6,9 +6,11 @@
     "android:bundle": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle",
     "android:build": "npm run android:bundle && cd android && gradlew assembleRelease && gradlew assembleDebug",
     "android:clean": "cd android && gradlew clean && gradlew build",
-    "format": "prettier --write src",
+    "format": "prettier src --write",
+    "format:check": "prettier src --check",
     "ios": "react-native run-ios",
     "lint": "eslint src --ext .ts,.tsx --fix",
+    "lint:check": "eslint src --ext .ts,.tsx",
     "start": "react-native start",
     "test": "jest"
   },
