feat(web): #416 add button
- Add component Button
- Override color primary
- Remove checks from tsconfig
- Enable sourcemap in teconfig for accurate test coverage

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -6,30 +6,21 @@
     "alwaysStrict": true,
     "baseUrl": "src",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react",
     "lib": ["DOM", "ESNext"],
     "module": "CommonJS",
     "moduleResolution": "Node",
     "noEmit": false,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": true,
     "outDir": "dist",
     "removeComments": true,
     "resolveJsonModule": true,
     "rootDir": "src",
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "ES5",
+    "target": "ES5"
   },
-  "include": ["src"],
+  "include": ["src"]
 }
