--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.3.3",
     "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "sass": "^1.64.1"
