--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
